--- a/about.html
+++ b/about.html
@@ -45,14 +45,15 @@
 			<img src="img/portrait.jpg" alt="Cassiano Junior" class="bio-image">
 			<div class="bio">
 				<h3 class="text-secondary">Resumo</h3>
-				<p>&nbsp; Atuo na área de Tecnologia da Informação, com análise e/ou desenvolvimento de sistemas nas plataformas Java, Node.JS e Android. Trabalho também em outras áreas da tecnologia como Técnico em Informática.</p>
+				<p>&nbsp; Atuo na área de Tecnologia da Informação, com análise e/ou desenvolvimento de sistemas nas plataformas Java, Node.JS e Android. Trabalho também em outras áreas da tecnologia como Técnico em Informática, realizando serviços como montagem e manutenção de computadores, cabeamento de redes estruturado e instalação e configuração de servidores Linux e Windows.</p>
 				<h3 class="text-secondary">Conhecimentos em:</h3>
 				<p>-Linguagens de programação: Java, Node.JS, HTML5, CSS3, Javascript, SASS, PHP, C/C++ e C#;</p>
 				<p>-Instalação, manutenção e configuração de servidores Linux e Windows.</p>
 				<p>-Softwares e Ferramentas de Desenvolvimento: Eclipse IDE, MysqlWorkbench, Visual Studio Code, Visual Studio, Android Studio, Microsoft Office e outros.</p>
 				<p>-Banco de Dados: Mysql e SQLite.</p>
-				<p>Análise de Sistemas: Levantamento de Requisitos, Elaborção de documentação e diagramas UML, modelagem de Banco de Dados e desenvolvimento de aplicações utilizando modelo MVC.</p>
-				
+				<p>-Gerenciamento de Projetos utilizando git e trello.</p>
+				<p>-Análise de Sistemas: Levantamento de Requisitos, Elaborção de documentação e diagramas UML, modelagem de Banco de Dados e desenvolvimento de aplicações utilizando modelo MVC.</p>
+				<p>-Conclusão do curso Cisco Netacad ITEssentials com mérito de mais de 80% de aproveitamento do curso.</p>
 			</div>
 
 			<div class="job job-1">
@@ -63,12 +64,12 @@
 			<div class="job job-2">
 				<h3>SENAI + Indústria 2018</h3>
 				<h6>Desenvolvedor back-end</h6>
-				<p>&nbsp; Fui chamado para realizar o desenvolvimento de uma aplicação atravéz do programa SENAI + Indústria, onde trabalhei como desenvolvedor de uma aplicação mobile.</p>
+				<p>&nbsp; Estou participando do programa SENAI + Indústria, onde trabalho como desenvolvedor de uma aplicação mobile.</p>
 			</div>
 			<div class="job job-3">
-				<h3>Site do Condomínio Tijuca Park</h3>
+				<h3>Locksmith API</h3>
 				<h6>Desenvolvedor Full-Stack</h6>
-				<p>&nbsp; Trabalhei como Full-Stack developer no projeto do site do condomínio Tijuca Park, onde realizei o desenvolvimento do projeto completo, assim como a implementação do mesmo no ambiente de produção.</p>
+				<p>&nbsp; O Locksmith é um projeto que visa ajudar desenvolvedores ao redor do mundo. Com um simples sistema de gerenciamento de keys de ativação, o desenvolvedor poderá usar a plataforma para criar chaves e gerenciar quem usa seus produtos.</p>
 			</div>
 		</div>
 	</main>
